--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -11,6 +11,7 @@ io: # input / output configurations
     results:
         root: null
         training_metadata: "dna/metadata"
+        training_output: "dna/training_output"
 global_butterfly_metadata:
     species: ["erato", "melpomene"]
     wings: ["forewings", "hindwings"]
