--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
 "dash-bio",
 "nbformat",
 "kaleido",
+"seaborn",
 "ipykernel",
+"ipywidgets",
 ]
 requires-python = "==3.10"
 authors = []
