--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 "ipywidgets",
 "dash",
 ]
-requires-python = "==3.10"
+requires-python = ">=3.10"
 authors = []
 maintainers = []
 description = "Genotype-to-Phenotype pipeline"
