--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,25 +6,28 @@ build-backend = "hatchling.build"
 name = "gtp"
 version = "2024.12.13"
 dependencies = [
-"tqdm",
-"click",
-"pytest",
-"torch",
-"torchvision",
-"matplotlib",
-"PyYAML",
-"pandas",
-"pyarrow",
-"scipy",
-"captum",
-"dash-bio",
-"nbformat",
-"kaleido",
-"seaborn",
-"statsmodels",
-"ipykernel",
-"ipywidgets",
-"dash",
+    "tqdm",
+    "click",
+    "pytest",
+    "torch",
+    "torchvision",
+    "matplotlib",
+    "PyYAML",
+    "pandas",
+    "pyarrow",
+    "scipy",
+    "captum",
+    "dash-bio",
+    "nbformat",
+    "kaleido",
+    "seaborn",
+    "statsmodels",
+    "ipykernel",
+    "ipywidgets",
+    "dash",
+    "rich>=14.1.0",
+    "gpustat>=1.1.1",
+    "polars>=1.32.0",
 ]
 requires-python = ">=3.10"
 authors = []
