--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "polars>=1.32.0",
     "openpyxl>=3.1.5",
     "anywidget>=0.9.18",
+    "hydra-core>=1.3.2",
 ]
 requires-python = ">=3.10"
 authors = []
